--- a/app.css
+++ b/app.css
@@ -115,6 +115,25 @@ body {
   transform: translateX(-50%);
 }
 
+
+input {
+  background: var(--input-bg);
+  border: 0px;
+  font-size: 16px;
+  outline: none;
+  color: var(--fg);
+  padding: 5px 8px;
+  border-radius: .7em;
+}
+
+button {
+  padding: 5px 8px;
+  background: var(--background);
+  border: 2px solid var(--fg);
+  border-radius: 5px;
+  color: var(--fg);
+}
+
 input.search-text {
   padding: 12px 15px;
   border-radius: 16px 0px 0px 16px;
