--- a/app.css
+++ b/app.css
@@ -42,6 +42,7 @@
   --accent: #57a0d9; /* Hover color */
   --background: #19171a; /* Background color */
   --cards: #201e21; /* Cards color */
+  --input-bg: #323033;
 
   /* Fonts Color */
   --fg: #d8dee9; /* Foreground color */
